assets/styles/header.css
header {
	display: flex;
	justify-content: space-between;
	padding: 1.25rem;
	padding-right: constant(safe-area-inset-right);
	padding-right: env(safe-area-inset-right);
	padding-left: constant(safe-area-inset-left);
	padding-left: env(safe-area-inset-left);
	
	a {
		display: block;
		text-decoration: none;
		
		&:last-child {
			text-align: right;
		}
	}
	
	svg {
		height: 3em;
		width: 3em;
	}
	
	.homelink {
		transition: opacity 0.35s ease;
		
		&:hover {
			opacity: 0.75;
		}
		
		span {
			display: none;
			color: white;
			font-size: 1.5em;
		}
	}
}

